# c2

./: .env.example  .gitignore  README.md  agent.py  database.py  fix_vbs.py  keylog.py  pyproject.toml  server.py  version_info.txt
docs/: ARCHITECTURE.md  SECURITY.md
src/windows_manager_sim/: __init__.py  __main__.py  cli.py  client.py  commands.py  config.py  dashboard.py  models.py  server.py  storage.py
tests/: test_commands.py  test_config.py  test_server.py  test_storage.py
vercel-c2/: README.md  agent.py  package.json
vercel-c2/api/: checkin.js  db.js
vercel-c2/public/: index.html
