[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-manager-sim"
version = "1.0.0"
description = "Consent-based endpoint telemetry and command simulation lab"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Windows Manager Simulation contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
]

[project.scripts]
wm-sim-agent = "windows_manager_sim.cli:agent_main"
wm-sim-server = "windows_manager_sim.cli:server_main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
